--- a/popup.html
+++ b/popup.html
@@ -1,95 +1,115 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Box Time</title>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Box Time</title>
 
-  <!-- Bootstrap CSS -->
-  <link href="./boostrap/boos/css/bootstrap.min.css" rel="stylesheet"> <!-- Corregir enlace -->
-  <!-- Flatpickr CSS -->
-  <link rel="stylesheet" href="flatpickr.min.css">
-  <!-- Estilos personalizados -->
-  <link href="styles.css" rel="stylesheet">
-</head>
+    <!-- Bootstrap CSS -->
+    <link href="./boostrap/boos/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Corregir enlace -->
+    <!-- Flatpickr CSS -->
+    <link rel="stylesheet" href="flatpickr.min.css">
+    <!-- Estilos personalizados -->
+    <link href="styles.css" rel="stylesheet">
+  </head>
 
-<body class="light-mode"> <!-- Modo predeterminado claro -->
+  <body class="light-mode"> <!-- Modo predeterminado claro -->
+    <!-- Contenedor principal con ancho fijo -->
+    <div class="container-custom p-2">
+      <div class="row g-3">
 
-  <!-- Contenedor principal con ancho fijo -->
-  <div class="container-custom p-3">
-    <div class="row g-3">
-
-      <!-- Botón de cambio de modo -->
-      <div class="col-12 text-end">
-        <button class="btn btn-secondary" id="toggle-mode">Cambiar Modo</button>
-      </div>
-
-      <!-- Columna izquierda -->
-      <div class="col-md-4">
-        <!-- Top de Prioridades -->
-        <div class="card p-3">
-          <div class="text-center">
-            <h5 class="text-info">Top de Prioridades</h5>
+        <!-- Botón de cambio de modo -->
+        <div class="col-12">
+          <div class="col-md-12">
+            <h1 class="text-center">Box Time</h1>
           </div>
-          <table class="table table-bordered">
-            <tbody>
-              <tr>
-                <td><input type="text" class="form-control" placeholder="Prioridad 1"></td>
-              </tr>
-              <tr>
-                <td><input type="text" class="form-control" placeholder="Prioridad 2"></td>
-              </tr>
-              <tr>
-                <td><input type="text" class="form-control" placeholder="Prioridad 3"></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-
-        <!-- Ideas o Tareas Pendientes -->
-        <div class="card p-3 mt-3">
-          <div class="text-center">
-            <h5 class="text-info">Ideas o Tareas Pendientes</h5>
-          </div>
-          <textarea class="form-control" rows="5" placeholder="Escribe tus ideas o tareas aquí..."></textarea>
-        </div>
-      </div>
-
-      <!-- Columna derecha -->
-      <div class="col-md-8">
-        <!-- Actividades -->
-        <div class="card p-4">
-          <div class="text-center mb-3">
-            <h5 class="text-info">Actividades</h5>
-          </div>
-          <div class="table-responsive" style="max-height: 300px; overflow-y: auto;">
-            <ul id="lista-actividades" class="list-group">
-              <!-- Fila base inicial -->
-              <li class="list-group-item d-flex align-items-center mb-3">
-                <span class="numero me-3">1</span>
-                <input type="text" class="form-control flex-grow-1 me-3" placeholder="Escribe una actividad">
-                <input type="time" class="form-control horario-input me-3" style="width: 100px;">
-                <!-- Reducido tamaño de input hora -->
-                <button class="btn btn-info btn-hora-actual ms-2">Now</button>
-                <!-- Añadido margin izquierdo al botón -->
-              </li>
-            </ul>
-          </div>
-          <button id="btn-agregar-fila" class="btn btn-primary mt-3 w-100">Agregar Fila</button>
-          <div id="notificacion" class="text-center mt-2" style="display: none;">Solo se permiten 7 registros de tarea.
+          <div class="text-end">
+            <button class="btn btn-secondary" id="toggle-mode">
+              <img src="./image/light.svg" alt="Modo Claro" id="mode-icon" style="width: 20px; height: 20px;">
+            </button>
+            <!-- Botón Reset con Icono -->
+            <button class="btn btn-danger" id="reset-button">
+              <img src="./image/reset.svg" alt="Reset"
+                style="width: 20px; margin-right: 5px;">
+            </button>
           </div>
         </div>
+
+        <!-- Columna izquierda -->
+        <div class=" col-md-4">
+          <!-- Top de Prioridades -->
+          <div class="card p-2">
+            <div class="text-center">
+              <h5 class="text-info">Top de Prioridades</h5>
+            </div>
+            <table class="table table-bordered" style="border-radius: 60px;">
+              <tbody>
+                <tr>
+                  <td><input type="text" class="form-control"
+                      placeholder="Prioridad 1"></td>
+                </tr>
+                <tr>
+                  <td><input type="text" class="form-control"
+                      placeholder="Prioridad 2"></td>
+                </tr>
+                <tr>
+                  <td><input type="text" class="form-control"
+                      placeholder="Prioridad 3"></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <!-- Ideas o Tareas Pendientes -->
+          <div class="card p-3 mt-3">
+            <div class="text-center">
+              <h5 class="text-info">Ideas o Tareas Pendientes</h5>
+            </div>
+            <textarea class="form-control" rows="5"
+              placeholder="Escribe tus ideas o tareas aquí..."></textarea>
+          </div>
+        </div>
+
+        <!-- Columna derecha -->
+        <div class="col-md-8">
+          <!-- Actividades -->
+          <div class="card p-1">
+            <div class="text-center mb-3">
+              <h5 class="text-info">Actividades</h5>
+            </div>
+            <div class="table-responsive"
+              style="max-height: 360px; overflow-y: auto;">
+              <ul id="lista-actividades" class="list-group">
+                <!-- Fila base inicial -->
+                <li class="list-group-item d-flex align-items-center mb-3">
+                  <span class="numero me-3">1</span>
+                  <input type="text" class="form-control flex-grow-1 me-3"
+                    placeholder="Escribe una actividad">
+                  <input type="time" class="form-control horario-input me-3"
+                    style="width: 100px;">
+                  <!-- Reducido tamaño de input hora -->
+                  <button class="btn btn-info btn-hora-actual ms-2">Now</button>
+                  <!-- Añadido margin izquierdo al botón -->
+                </li>
+              </ul>
+            </div>
+            <button id="btn-agregar-fila"
+              class="btn btn-primary mt-3 w-100">Agregar Fila</button>
+            <div id="notificacion" class="text-center mt-2"
+              style="display: none;">Solo se permiten 7 registros de tarea.
+            </div>
+          </div>
+        </div>
+
       </div>
-
-
     </div>
-  </div>
 
-  <!-- Bootstrap JS y Flatpickr JS al final -->
-  <script src="./boostrap/boos/js/bootstrap.min.js"></script>
-  <script src="flatpickr.min.js"></script>
-  <script src="script.js" defer></script>
-</body>
+    <!-- Bootstrap JS y Flatpickr JS al final -->
+    <script src="./boostrap/boos/js/bootstrap.min.js"></script>
+    <script src="flatpickr.min.js"></script>
+    <script src="script.js" defer></script>
+  </body>
 
 </html>
