--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
           <div class="col-md-12">
             <h1 class="text-center">Box Time</h1>
           </div>
-          <div class="text-end">
+          <div class="text-center">
             <button class="btn btn-secondary" id="toggle-mode">
               <img src="./image/light.svg" alt="Modo Claro" id="mode-icon" style="width: 20px; height: 20px;">
             </button>
