--- a/popup.html
+++ b/popup.html
@@ -10,9 +10,9 @@
     <link href="./boostrap/boos/css/bootstrap.min.css" rel="stylesheet">
     <!-- Corregir enlace -->
     <!-- Flatpickr CSS -->
-    <link rel="stylesheet" href="flatpickr.min.css">
+    <link rel="stylesheet" href="./css/flatpickr.min.css">
     <!-- Estilos personalizados -->
-    <link href="styles.css" rel="stylesheet">
+    <link href="./css/styles.css" rel="stylesheet">
   </head>
 
   <body class="light-mode"> <!-- Modo predeterminado claro -->
@@ -42,7 +42,7 @@
           <!-- Top de Prioridades -->
           <div class="card p-2">
             <div class="text-center">
-              <h5 class="text-info">Top de Prioridades</h5>
+              <h5 class="data_text">Top de Prioridades</h5>
             </div>
             <table class="table table-bordered" style="border-radius: 60px;">
               <tbody>
@@ -65,7 +65,7 @@
           <!-- Ideas o Tareas Pendientes -->
           <div class="card p-3 mt-3">
             <div class="text-center">
-              <h5 class="text-info">Ideas o Tareas Pendientes</h5>
+              <h5 class="data_text">Ideas o Tareas Pendientes</h5>
             </div>
             <textarea class="form-control" rows="5"
               placeholder="Escribe tus ideas o tareas aquí..."></textarea>
@@ -77,7 +77,7 @@
           <!-- Actividades -->
           <div class="card p-1">
             <div class="text-center mb-3">
-              <h5 class="text-info">Actividades</h5>
+              <h5 class="data_text">Actividades</h5>
             </div>
             <div class="table-responsive"
               style="max-height: 360px; overflow-y: auto;">
@@ -108,8 +108,8 @@
 
     <!-- Bootstrap JS y Flatpickr JS al final -->
     <script src="./boostrap/boos/js/bootstrap.min.js"></script>
-    <script src="flatpickr.min.js"></script>
-    <script src="script.js" defer></script>
+    <script src="./js/flatpickr.min.js"></script>
+    <script src="./js/script.js" defer></script>
   </body>
 
 </html>
